--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
+title: zhyp's blog
+description: 这是一个测试性质的博客
 
 theme: null
 
